fixing pipeline yml

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      # note that your "main" branch might be called main instead of master
 
 jobs:
   simple_deployment_pipeline:
@@ -14,6 +15,8 @@ jobs:
         with:
           node-version: '16'
       - name: npm install
-        run: npm install
+        run: | 
+          npm install
        - name: lint
-        run: npm run eslint
+        run: | 
+          npm run eslint
