--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-      # note that your "main" branch might be called main instead of master
 
 jobs:
   simple_deployment_pipeline:
@@ -15,8 +14,6 @@ jobs:
         with:
           node-version: '16'
       - name: npm install
-        run: | 
-          npm install
-       - name: lint
-        run: | 
-          npm run eslint
+        run: npm install
+      - name: lint
+        run: npm run eslint
