--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
 
+env: 
+  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-20.04
@@ -27,3 +30,6 @@ jobs:
           build: npm run build
           start: npm run start-prod
           wait-on: http://localhost:5000
+      - name: Deploy app
+        uses: superfly/flyctl-actions/setup-flyctl@master
+        run: /Users/steffenjensen/.fly/bin/flyctl deploy --remote-only
